// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty panel view component renders empty panel view with disabled popover 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiSpacer euiSpacer--xxl"
      />
      <div
        class="euiText euiText--medium"
        data-test-subj="addFirstVisualizationText"
      >
        <div
          class="euiTextAlign euiTextAlign--center"
        >
          <h2>
            Start by adding your first visualization
          </h2>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              Use PPL Queries to fetch & filter observability data and create visualizations
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiPopover euiPopover--anchorDownLeft"
            id="addVisualizationContextMenu"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                data-test-subj="addVisualizationButton"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                  <span
                    class="euiButton__text"
                  >
                    Add visualization
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--xxl"
      />
    </div>
  </div>
</body>
`;

exports[`Empty panel view component renders empty panel view with enabled popover 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiSpacer euiSpacer--xxl"
      />
      <div
        class="euiText euiText--medium"
        data-test-subj="addFirstVisualizationText"
      >
        <div
          class="euiTextAlign euiTextAlign--center"
        >
          <h2>
            Start by adding your first visualization
          </h2>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              Use PPL Queries to fetch & filter observability data and create visualizations
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiPopover euiPopover--anchorDownLeft"
            id="addVisualizationContextMenu"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButton euiButton--primary euiButton--small"
                data-test-subj="addVisualizationButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                  <span
                    class="euiButton__text"
                  >
                    Add visualization
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--xxl"
      />
    </div>
  </div>
</body>
`;
